fix DataView width overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 }
 
 .ScrollContainer {
-    flex: 1 0 25%;
+    flex: 1 0 0;
+    min-width: 400px;
     background-color: white;
     border: 2px solid #E1E1E1;
     margin: 0 10px;
@@ -48,7 +49,7 @@
 
 .annotationsList {
     flex-grow: 1;
-    padding: 10px;
+    padding: 40px 10px 0px 10px;
     overflow-y: scroll;
 }
 
@@ -113,4 +114,5 @@
     font-family: 'Source Code Pro', monospace;
     font-size: 16px;
     color: blue;
+    cursor: pointer;
 }
